--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@remix-run/eslint-config": "^1.7.2",
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
+    "@types/styled-components": "^5.1.26",
     "eslint": "^8.23.1",
     "typescript": "^4.7.4"
   },
