--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "@remix-run/serve": "^1.7.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "styled-components": "^5.3.6"
+    "styled-components": "^5.3.6",
+    "tiny-invariant": "^1.3.1"
   },
   "devDependencies": {
     "@remix-run/dev": "^1.7.2",
