--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "@remix-run/node": "^1.7.2",
     "@remix-run/react": "^1.7.2",
     "@remix-run/serve": "^1.7.2",
+    "chart.js": "^3.9.1",
     "react": "^18.2.0",
+    "react-chartjs-2": "^4.3.1",
     "react-dom": "^18.2.0",
     "styled-components": "^5.3.6",
     "tiny-invariant": "^1.3.1"
