--- a/package.json
+++ b/package.json
@@ -7,13 +7,17 @@
     "start": "remix-serve build"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.8.6",
     "@remix-run/node": "^1.7.2",
     "@remix-run/react": "^1.7.2",
     "@remix-run/serve": "^1.7.2",
+    "@types/react-redux": "^7.1.24",
     "chart.js": "^3.9.1",
     "react": "^18.2.0",
     "react-chartjs-2": "^4.3.1",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.0.4",
+    "redux": "^4.2.0",
     "styled-components": "^5.3.6",
     "tiny-invariant": "^1.3.1"
   },
