--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@remix-run/react": "^1.7.2",
     "@remix-run/serve": "^1.7.2",
     "@types/react-redux": "^7.1.24",
+    "axios": "^1.1.3",
     "chart.js": "^3.9.1",
     "react": "^18.2.0",
     "react-chartjs-2": "^4.3.1",
